--- a/Mod5+/OlympicsProject/OlympicsProject/Views/Home/Olympics.cshtml
+++ b/Mod5+/OlympicsProject/OlympicsProject/Views/Home/Olympics.cshtml
@@ -1,7 +1,7 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model IEnumerable<Team>
+@model IEnumerable<Country>
 @{
     ViewData["Title"] = "Olympics";
     string Active(string filter, string selected) {
@@ -14,18 +14,46 @@
         <div class="list-group">
             <a asp-action="Olympics"
                 asp-route-activeCategory="all"
-                asp-route-activeSport="@viewBag.ActiveSport"
+                asp-route-activeType="@ViewBag.activeType"
                 class="list-group-item @Active("all", ViewBag.ActiveCategory)">
                 All</a>
 
-            @foreach (Sport cat in ViewBag.Sports){
+            @foreach (Category cat in ViewBag.Categories){
                 <a asp-action="Olympics"
-                asp-route-activeCategory="@cat.Category"
-                asp-route-activeSport="@ViewBag.ActiveSport"
-                class="list-group-item @Active(cat.SportName, ViewBag.ActiveCategory)">
-                @cat.Category</a>
+                asp-route-activeCategory="@cat.CategoryName"
+                asp-route-activeType="@ViewBag.activeType"
+                class="list-group-item @Active(cat.CategoryName, ViewBag.ActiveCategory)">
+                @cat.CategoryName</a>
             }
         </div>
 
+    </div>
+    <div class="col-md-3">
+        <h3 class="mt-3">Category</h3>
+        <div class="list-group">
+            <a asp-action="Olympics"
+                asp-route-activeCategory="@ViewBag.ActiveCategory"
+                asp-route-activeType="all"
+                class="list-group-item @Active("all", ViewBag.ActiveCategory)">
+                All</a>
+
+            @foreach (oType type in ViewBag.Types){
+                <a asp-action="Olympics"
+                asp-route-activeCategory="@ViewBag.activeCategory"
+                asp-route-activeType="@type.TypeName"
+                class="list-group-item @Active(type.TypeName, ViewBag.ActiveCategory)">
+                @type.TypeName</a>
+            }
+        </div>
+        <div class="col-md-6">
+            <ul class="list-inline">
+                @foreach (Country country in Model){
+                    <li class="list-inline-item">
+                        <img src="~/Images/@country.Flag" alt="@country.Name"
+                        title="@country.Name | @country.Sport.SportName" />
+                    </li>
+                }
+            </ul>
+        </div>
     </div>
 </div>
