--- a/Mod5+/OlympicsProject/OlympicsProject/Views/Shared/_Layout.cshtml
+++ b/Mod5+/OlympicsProject/OlympicsProject/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ToDo">ToDo</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Ticket">Tickets</a>
+                        </li>
                     </ul>
                 </div>
             </div>
